# mprisctl

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
examples/: CMakeLists.txt  main.cpp
include/: mprisctl.h
src/: mprisctl.cpp
